--- a/YT/css/app.css
+++ b/YT/css/app.css
@@ -184,8 +184,10 @@ right: 18px;top: 50%;margin-top: -10px; background-size: contain;}
 #comments-list .comments-info .comment-author p{margin-bottom: 0;}
 #comments-list .comments-info .comment-author .floor-like{float: right;}
 #comments-list .comments-info .comment-author .floor-like a {display: inline-block; width: 15px; height: 15px; float: right;}
-#comments-list .comments-info .comment-author .floor-like a.menu-btn{width: 5px; margin-left: 30px; margin-right: 15px;}
-#comments-list .comments-info .comment-author .floor-like a img{width: 100%; height: 100%;}
+#comments-list .comments-info .comment-author .floor-like a.menu-btn{width: 5px; margin-left: 20px; margin-right: 10px; height: 15px;}
+#comments-list .comments-info .comment-author .floor-like a img{height: 100%;}
+#comments-list .comments-info .comment-author .floor-like a.like-btn{display: inline-block; width: 15px; height: 15px; background: url(../images/good.png) no-repeat; background-size: contain;}
+#comments-list .comments-info .comment-author .floor-like a.like-btn.active{background-image: url(../images/good_hover.png);}
 #comments-list .comments-content{width: 87%; float: right; margin: 10px 0;}
 .user-role{background-color: #2fc5ab; color: #fff; width: 18px; height: 18px; text-align: center; line-height: 20px; border-radius: 50%; font-size: 14px;}
 .user-master{background: url(../images/dr.png) no-repeat; color: #fff; width: 40px; height: 18px; background-size: contain; text-align: center;}
