--- a/YT/css/app.css
+++ b/YT/css/app.css
@@ -245,3 +245,46 @@ right: 18px;top: 50%;margin-top: -10px; background-size: contain;}
 #contentForm .mui-row:after{display: none;}
 
 
+#profile-header{min-height: 186px; width: 100%; background: url(../images/profile_bg.png) no-repeat; background-size: cover; padding-top: 38px;}
+#profile-header .profile-avatar{width: 72px; height: 72px; border-radius: 50%; border: 2px solid #e4e4e4;}
+#profile-header .user-tag{display: inline-block;}
+#profile-header .col-avatar{width: 25%;}
+#profile-header .col-info{width: 75%;}
+#profile-header .character{padding-right: 15px;}
+#profile-header .mui-col-sm-3{width: 25%; text-align: center;}
+#profile-header .mui-col-sm-3 > p{margin-bottom: 0;}
+#profile-header .mui-col-sm-3 > a{color: #333333;}
+#profile-header .profile-data{border-top: 1px solid #dedede; border-bottom: 1px solid #dedede; padding: 8px 0;}
+#profile-nav{margin-bottom: 63px;}
+#profile-nav .mui-table-view:first-child{margin-top: 0;}
+#profile-nav .mui-table-view .mui-table-view-cell{padding: 13px 15px 13px 30px; font-size: 14px;}
+#profile-nav .mui-table-view .mui-table-view-cell:after{left: 0;}
+#profile-nav .mui-table-view .mui-table-view-cell > a{position: relative;}
+#profile-nav .mui-table-view .mui-table-view-cell > a:before{content: ""; position: absolute; width: 16px; height: 16px; left: 5px; top: 50%; margin-top: -12px; background-size: contain; background-repeat: no-repeat;}
+#profile-nav .mui-table-view .mui-table-view-cell > a.my-post:before{background-image: url(../images/post_icon.png);}
+#profile-nav .mui-table-view .mui-table-view-cell > a.my-collection:before{background-image: url(../images/collect_icon.png);}
+#profile-nav .mui-table-view .mui-table-view-cell > a.my-invitation:before{background-image: url(../images/invite_icon.png);}
+#profile-nav .mui-table-view .mui-table-view-cell > a.my-secret:before{background-image: url(../images/lock_icon.png);}
+#profile-nav .mui-table-view .mui-table-view-cell > a.my-setting:before{background-image: url(../images/setting_icon.png);}
+#profile-nav .mui-table-view .mui-table-view-cell > a.my-about:before{background-image: url(../images/about_icon.png);}
+#profile-nav .mui-table-view .mui-table-view-cell > a.my-opinion:before{background-image: url(../images/opinion_icon.png);}
+
+.other-profile-card{margin-top: 44px; height: 200px; background-size: 100% 100%;}
+.other-profile-card .mui-card-content{height: 100%;}
+.other-profile-card .mui-card-content > img{height: 100%;}
+.other-profile-card .mui-card-content .small-cards{width: 50%; height: 100%; position: absolute; top: 0; right: 0;}
+.other-profile-card .mui-card-content .small-cards .small-card-view{width: 48%; height: 48%; float: left;}
+.other-profile-card .mui-card-content .small-cards .small-card-view:nth-child(2n){
+	margin-left: 4%;
+}
+.other-profile-card .mui-card-content .small-cards .small-card-view:nth-child(3){
+	margin-top: 4%;
+}
+.other-profile-card .mui-card-content .small-cards .small-card-view:nth-child(4){
+	margin-top: 4%;
+}
+.profile-info{padding: 0 10px;}
+.profile-info .user-right{float: right; color: #7f7f7f; font-size: 14px;}
+.profile-content{padding: 0 10px; margin: 10px 0; color: #333333;}
+.profile-more{width: 100%; text-align: center; border-bottom: 1px solid #dedede;}
+.profile-more >a {display: inline-block; padding: 6px 10px; background: #9f9f9f; color: #fff; font-size: 14px; border-top-left-radius: 3px; border-top-right-radius: 3px;}
