--- a/YT/css/app.css
+++ b/YT/css/app.css
@@ -286,5 +286,16 @@ right: 18px;top: 50%;margin-top: -10px; background-size: contain;}
 .profile-info{padding: 0 10px;}
 .profile-info .user-right{float: right; color: #7f7f7f; font-size: 14px;}
 .profile-content{padding: 0 10px; margin: 10px 0; color: #333333;}
-.profile-more{width: 100%; text-align: center; border-bottom: 1px solid #dedede;}
+.profile-more{width: 100%; text-align: center; border-bottom: 1px solid #dedede; position: relative;}
+.profile-more:after{content: ''; position: absolute; width: 100%; height: 9px; background: #f8f8f8; left: 0; bottom: -10px;}
 .profile-more >a {display: inline-block; padding: 6px 10px; background: #9f9f9f; color: #fff; font-size: 14px; border-top-left-radius: 3px; border-top-right-radius: 3px;}
+.mui-bar-nav ~ .other-profile-content{padding-top: 0;}
+.other-profile-content .index-list-text p{margin-top: 0; color: #999999;}
+.nav-ico-sx{background-image: url(../images/sx.png); background-size: contain;background-repeat: no-repeat;}
+.nav-ico-jhy{background-image: url(../images/jhy.png); background-size: contain;background-repeat: no-repeat;}
+.nav-ico-gz{background-image: url(../images/gz.png); background-size: contain;background-repeat: no-repeat;}
+.profile-bar{background-color: rgba(0,0,0,.8)}
+.profile-bar .mui-tab-label{color: #fff!important;}
+.profile-bar .mui-tab-item.active .mui-tab-label{color: #b3b3b3!important;}
+.profile-bar .mui-tab-item.active .nav-ico-jhy{background-image: url(../images/del_friend.png);}
+.profile-bar .mui-tab-item.active .nav-ico-gz{background-image: url(../images/unfollow.png);}
