--- a/YT/css/app.css
+++ b/YT/css/app.css
@@ -299,3 +299,37 @@ right: 18px;top: 50%;margin-top: -10px; background-size: contain;}
 .profile-bar .mui-tab-item.active .mui-tab-label{color: #b3b3b3!important;}
 .profile-bar .mui-tab-item.active .nav-ico-jhy{background-image: url(../images/del_friend.png);}
 .profile-bar .mui-tab-item.active .nav-ico-gz{background-image: url(../images/unfollow.png);}
+
+
+#circle-list{margin-top: 44px;}
+#circle-list .mui-table-view-cell.mui-active{background-color: transparent;}
+#circle-list .circle-avatar{ width: 36px; height: 36px; border-radius: 50%; }
+#circle-list .mui-ellipsis{white-space: normal; text-overflow: initial;}
+#circle-list .name{font-size: 14px; color: #488379;}
+#circle-list .green-heart{display: inline-block; width: 13px; height: 11px; background-size: contain; background: url(../images/green_heart.png) no-repeat;}
+#circle-list .like{border-bottom: 1px solid #e4e4e4; padding: 4px 8px;}
+#circle-list .like > span {font-size: 14px; color: #488379;}
+#circle-list .comments {padding: 4px 8px;}
+#circle-list .comments > p {color: #333333;}
+#circle-list .like-comments{background-color: #F5F5F5; margin-top: 14px; position: relative;}
+#circle-list .like-comments:after{content: ''; position: absolute; width: 12px; height: 10px; background: url(../images/icon_triangle.png) no-repeat; background-size: contain; left: 10px; top: -8px;}
+#circle-list .circle-content{position: relative;}
+#circle-list .circle-content .circle-like{width: 18px; height: 12px; background: url(../images/circle_like.png) no-repeat; background-size: contain; position: absolute; right: 0; bottom: 13px;}
+#circle-list .circle-content  .like-comment-btn{width: 110px; height: 30px; background-color: #363636; border-radius: 15px; position: absolute; left: -115px; top: -5px; display: none}
+#circle-list .circle-content  .like-comment-btn:after{content: ''; position: absolute; height: 20px; border-left: 1px solid #616161; border-right: 1px solid #1a1a1a; left: 50%; top: 50%; margin-top: -10px;}
+#circle-list .circle-content  .like-comment-btn > a {display: block; width: 50%; float: left; text-align: center; line-height: 30px; color: #fff; font-size: 12px;}
+#circle-list .circle-content  .like-comment-btn > a img {display: inline-block; width: 16px; height: 14px; margin-right: 3px; position: relative; top: 3px;}
+
+
+.message-friends-tab{ width: 116px; height: 30px; background: #fff; display: inline-block; position: absolute; left: 50%; margin-left: -58px; top: 50%; margin-top: -15px; border: 1px solid #161616; border-radius: 5px; overflow: hidden;}
+.message-friends-tab > a{display: block; width: 50%; float: left; text-align: center; line-height: 30px; font-size: 14px; color: #161616;} 
+.message-friends-tab > a.active{background-color: #161616; color: #fff;}
+.new-friends-apply{margin-top: 44px;}
+.new-friends-apply .mui-badge{right: 40px; border-radius: 50%; width:20px; height: 20px; text-align: center; line-height: 24px; font-size: 10px; padding: 0;}
+#message-list{margin-top: 0;}
+#message-list .mui-ellipsis{white-space: normal; text-overflow: initial;}
+#message-list .time{font-size: 14px; color: #c1c1c1; float: right;}
+#message-list .avatar{position: relative;}
+#message-list .message-num{width: 16px; height: 16px; text-align: center; color: #fff; background: #ff2352; line-height: 20px; position: absolute; border-radius: 50%; font-size: 10px; right: 5px;}
+.add-friend{width: 20px; height: 20px; margin-top: 10px;}
+.add-friend > img{width: 100%; height: 100%;}
